// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid should render 1`] = `
<div
  className="root"
>
  <div
    className="row"
    key="0"
  >
    <GridItem
      colN={0}
      itemState={
        Object {
          "id": "0_0",
          "player": undefined,
        }
      }
      key="0-0"
      onItemClick={[Function]}
      position={
        Object {
          "bottom": false,
          "left": true,
          "right": false,
          "top": true,
        }
      }
      rowN={0}
    />
    <GridItem
      colN={0}
      itemState={
        Object {
          "id": "0_1",
          "player": undefined,
        }
      }
      key="0-1"
      onItemClick={[Function]}
      position={
        Object {
          "bottom": false,
          "left": false,
          "right": false,
          "top": true,
        }
      }
      rowN={1}
    />
    <GridItem
      colN={0}
      itemState={
        Object {
          "id": "0_2",
          "player": undefined,
        }
      }
      key="0-2"
      onItemClick={[Function]}
      position={
        Object {
          "bottom": false,
          "left": false,
          "right": true,
          "top": true,
        }
      }
      rowN={2}
    />
  </div>
  <div
    className="row"
    key="1"
  >
    <GridItem
      colN={1}
      itemState={
        Object {
          "id": "1_0",
          "player": undefined,
        }
      }
      key="1-0"
      onItemClick={[Function]}
      position={
        Object {
          "bottom": false,
          "left": true,
          "right": false,
          "top": false,
        }
      }
      rowN={0}
    />
    <GridItem
      colN={1}
      itemState={
        Object {
          "id": "1_1",
          "player": undefined,
        }
      }
      key="1-1"
      onItemClick={[Function]}
      position={
        Object {
          "bottom": false,
          "left": false,
          "right": false,
          "top": false,
        }
      }
      rowN={1}
    />
    <GridItem
      colN={1}
      itemState={
        Object {
          "id": "1_2",
          "player": undefined,
        }
      }
      key="1-2"
      onItemClick={[Function]}
      position={
        Object {
          "bottom": false,
          "left": false,
          "right": true,
          "top": false,
        }
      }
      rowN={2}
    />
  </div>
  <div
    className="row"
    key="2"
  >
    <GridItem
      colN={2}
      itemState={
        Object {
          "id": "2_0",
          "player": undefined,
        }
      }
      key="2-0"
      onItemClick={[Function]}
      position={
        Object {
          "bottom": true,
          "left": true,
          "right": false,
          "top": false,
        }
      }
      rowN={0}
    />
    <GridItem
      colN={2}
      itemState={
        Object {
          "id": "2_1",
          "player": undefined,
        }
      }
      key="2-1"
      onItemClick={[Function]}
      position={
        Object {
          "bottom": true,
          "left": false,
          "right": false,
          "top": false,
        }
      }
      rowN={1}
    />
    <GridItem
      colN={2}
      itemState={
        Object {
          "id": "2_2",
          "player": undefined,
        }
      }
      key="2-2"
      onItemClick={[Function]}
      position={
        Object {
          "bottom": true,
          "left": false,
          "right": true,
          "top": false,
        }
      }
      rowN={2}
    />
  </div>
</div>
`;

exports[`Grid should render CROSS Winner 1`] = `
<div
  className="root"
>
  CROSS HAS WON
</div>
`;

exports[`Grid should render DRAW 1`] = `
<div
  className="root"
>
  DRAW
</div>
`;

exports[`Grid should render NAUGHT Winner 1`] = `
<div
  className="root"
>
  NAUGHT HAS WON
</div>
`;
